--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>0929</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
-
 <body>
-    <p>aaaaaaa</p>
-</body>
+    <button id="btngo">GO</button>
+    <div class="bb">
+        <p>123</p>
+        <p>555</p>
+        <p>456</p>
+    </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
+    <script type="text/javascript">
+        $(function ()) {
+            $("#btngo").click(OnBtnGoClick):
+        }
+    </script>
+
+</body>
 </html>
